<resources>
    <string name="app_name">Scorepal</string>

    <string name="file_provider_authority" translatable="false">uk.co.darkerwaters.scorepal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>

    <string name="mute_desc">Mute all sounds played.</string>
    <string name="mute">Mute</string>
    <string name="content_mute">mute sound</string>

    <string name="useContact_desc">Use phone contacts to find players.</string>
    <string name="useContact">Use contacts</string>
    <string name="content_useContact">give permission to access contacts</string>

    <string name="dataWipe">Wipe Data</string>
    <string name="dataWipe_desc">Delete all data and progress from application</string>
    <string name="onlyIfSure">Only Press if you are REALLY sure, all progress will be lost forever.</string>
    <string name="wipe">Wipe All Data</string>
    <string name="areYouSure">Are you REALLY REALLY Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="matchWipeConfirmation">Are you sure? Current match data will be lost forever...</string>
    <string name="matchDeleteConfirmation">Are you sure? Match data will be lost forever...</string>

    <string name="points">Points</string>
    <string name="sets">Sets</string>
    <string name="games">Games</string>

    <string name="five_sets">5</string>
    <string name="three_sets">3</string>
    <string name="one_sets">1</string>

    <string name="speak_all">all</string>
    <string name="display_love">0</string>
    <string name="speak_love">love</string>
    <string name="speak_love_all">love all</string>
    <string name="display_15">15</string>
    <string name="speak_15">fifteen</string>
    <string name="speak_15_all">fifteen all</string>
    <string name="display_30">30</string>
    <string name="speak_30">thirty</string>
    <string name="speak_30_all">thirty all</string>
    <string name="display_40">40</string>
    <string name="speak_40">forty</string>
    <string name="display_advantage">AD</string>
    <string name="speak_advantage">advantage</string>
    <string name="display_deuce">40</string>
    <string name="speak_deuce">deuce</string>
    <string name="display_game">game</string>
    <string name="speak_game">game</string>
    <string name="display_set">set</string>
    <string name="speak_set">set</string>
    <string name="display_match">match</string>
    <string name="speak_match">match</string>

    <string name="team_one_title">Team One</string>
    <string name="team_two_title">Team Two</string>
    <string name="default_playerOneName">Player One</string>
    <string name="default_playerTwoName">Player Two</string>
    <string name="default_playerOnePartnerName">Player One Partner</string>
    <string name="default_playerTwoPartnerName">Player Two Partner</string>

    <string name="tennis_sport">Tennis</string>
    <string name="tennisSubtitle">Play a match of sets / games / points</string>
    <string name="points_sport">Points</string>
    <string name="pointsSubtitle">Play a match of just points</string>

    <string name="server">Server</string>
    <string name="receiver">Receiver</string>
    <string name="singles">Singles</string>
    <string name="doubles">Doubles</string>
    <string name="contact_access_explanation">This app would like access to your contacts to show your friends as playing partners. Would you like to grant access?</string>
    <string name="file_access_explanation">This app would like access to your files to send match data to your friends. Would you like to grant access?</string>
    <string name="bluetooth_access_explanation">This app would like access to bluetooth to find and connect to a remote control. Would you like to grant access?</string>

    <string name="previous_sets">Previous Sets</string>
    <string name="current_score">Current Score</string>
    <string name="tie_example">(7-5)</string>
    <string name="time">Time</string>
    <string name="match">Match</string>
    <string name="time_seperator">.</string>

    <string name="change_ends">Change Ends...</string>
    <string name="change_server">Change Server...</string>
    <string name="match_over">Match Over</string>
    <string name="match_completed">Match Completed</string>

    <string name="btn_change_ends">Change Ends</string>
    <string name="btn_change_server">Change Server</string>
    <string name="btn_change_starter">Change Starter</string>
    <string name="btn_undo">Undo Last Point</string>
    <string name="reset_match">Reset</string>
    <string name="current_match">Current Match</string>
    <string name="deciding_point_deuce">Deciding point following Deuce</string>
    <string name="tie_on_final_set">Tie-break in final set</string>
    <string name="at">at</string>
    <string name="default_final_set_target">6 - 6</string>
    <string name="deciding_point">Deciding Point...</string>
    <string name="btn_endMatch">End Match</string>
    <string name="btn_startMatch">Start Match</string>
    <string name="loading_match_details">Loading Match Details...</string>
    <string name="match_description">%1$s %2$s %3$s in %4$s:%5$s minutes at %6$s on %7$s.</string>
    <string name="match_beat">beat</string>
    <string name="match_beating">beating</string>
    <string name="resume_match">Resume</string>
    <string name="btn_more">More...</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_less">Less...</string>
    <string name="total_points">Total points</string>
    <string name="break_points">Break points</string>
    <string name="btn_share">Share</string>
    <string name="share_body">Here are the results of our match</string>
    <string name="share_subject">Match results</string>
    <string name="delete_failure">Sorry, I couldn\'t delete that.</string>
    <string name="loading_failure">Failed to load the data</string>

    <string name="btn_sounds">Sounds</string>
    <string name="btn_points">Points</string>
    <string name="btn_messages">Messages</string>
    <string name="btn_tapController">Tap control</string>
    <string name="btn_controlBT">Bluetooth Remote</string>
    <string name="permission_denied_neverask">Sorry, but you selected to never ask again. You will need to allow this permission in settings -- apps on your phone.</string>
    <string name="ok">Ok</string>
    <string name="bt_not_compatable">BT Not compatible</string>
    <string name="bt_not_compatable_explan">Your phone does not support Bluetooth</string>
    <string name="btn_code">Code</string>
    <string name="btn_pattern">Click Pattern</string>
    <string name="btn_click_action">Action</string>

    <string name="action_ptServer">Pt Server</string>
    <string name="action_ptReceiver">Pt Receiver</string>
    <string name="action_ptTeamOne">Pt Team 1</string>
    <string name="action_ptTeamTwo">Pt Team 2</string>
    <string name="action_ptUndo">Undo Last</string>

    <string name="pattern_singleClick">1 Click</string>
    <string name="pattern_doubleClick">2 Click</string>
    <string name="pattern_longClick">Long Click</string>
    <string name="pattern_tripleClick">3 Click</string>
    <string name="btn_addButtonAction">Add Button Action</string>

</resources>
