<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    tools:context=".activities.fragments.FragmentSounds">

    <ImageButton
        android:id="@+id/soundsImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:src="@drawable/ic_baseline_volume_up_24px"
        android:tint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/soundsMuteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_baseline_volume_off_24px"
        android:text="@string/btn_sounds"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/pointsMuteButton"
        app:layout_constraintEnd_toStartOf="@+id/soundsImageButton"
        app:layout_constraintStart_toStartOf="@+id/messagesMuteButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pointsMuteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_baseline_volume_off_24px"
        android:text="@string/btn_points"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/messagesMuteButton"
        app:layout_constraintEnd_toEndOf="@+id/soundsMuteButton"
        app:layout_constraintStart_toStartOf="@+id/messagesMuteButton"
        app:layout_constraintTop_toBottomOf="@+id/soundsMuteButton" />

    <Button
        android:id="@+id/messagesMuteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_baseline_volume_off_24px"
        android:text="@string/btn_messages"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pointsMuteButton"
        app:layout_constraintTop_toBottomOf="@+id/pointsMuteButton" />
</android.support.constraint.ConstraintLayout>