<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/remoteButtonImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@id/buttonCodeText"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_radio" />

        <TextView
            android:id="@+id/buttonCodeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/btn_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintStart_toEndOf="@+id/remoteButtonImage"
            app:layout_constraintTop_toTopOf="@+id/remoteButtonImage" />

        <TextView
            android:id="@+id/buttonCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/display_love"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="@+id/buttonCodeTitle"
            app:layout_constraintStart_toStartOf="@+id/buttonCodeTitle"
            app:layout_constraintTop_toBottomOf="@+id/buttonCodeTitle" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/remoteButtonRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remoteButtonImage" />

        <Button
            android:id="@+id/addActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_addButtonAction"
            app:layout_constraintBottom_toBottomOf="@+id/remoteButtonImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/remoteButtonImage" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>